--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -162,7 +162,8 @@ wsrep_sst_auth=<%= node['wsrep']['sst_auth'] %>
 # Protocol version to use
 # wsrep_protocol_version=
 
-
-#!includedir /etc/mysql/conf.d/
-
-
+#
+# * IMPORTANT: Additional settings that can override those from this file!
+#   The files must end with '.cnf', otherwise they'll be ignored.
+#
+!includedir /etc/mysql/conf.d/
