--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -166,4 +166,4 @@ wsrep_sst_auth=<%= node['wsrep']['sst_auth'] %>
 # * IMPORTANT: Additional settings that can override those from this file!
 #   The files must end with '.cnf', otherwise they'll be ignored.
 #
-!includedir /etc/mysql/conf.d/
+#!includedir /etc/mysql/conf.d/
