--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -18,7 +18,7 @@ basedir = <%= node['mysql']['base_dir'] %>
 datadir = <%= node['mysql']['data_dir'] %>
 pid_file = <%= node['mysql']['pid_file'] %>
 tmpdir = <%= node['mysql']['tmpdir'] %>
-log_error = error.log
+log_error = <%= node['mysql']['log_file'] %>
 #syslog
 
 [MYSQLD]
@@ -29,7 +29,7 @@ pid_file = <%= node['mysql']['pid_file'] %>
 socket = <%= node['mysql']['socket'] %>
 port = <%= node['mysql']['port'] %>
 tmpdir = <%= node['mysql']['tmp_dir'] %>
-log_error = error.log
+log_error = <%= node['mysql']['log_file'] %>
 
 innodb_buffer_pool_size = <%= node['mysql']['tunable']['buffer_pool_size'] %>
 # buffer pool size > 1GB if you want multiple instances
